--- a/tabbed_admin/templates/tabbed_admin/change_form.html
+++ b/tabbed_admin/templates/tabbed_admin/change_form.html
@@ -22,7 +22,7 @@
                 <b-card no-body>
                     <b-tabs card>
                     {% for tab in tabs.fields %}
-                      <b-tab title={{ tab.name }} id="for_tabs-{{ forloop.counter }}" class={{ tab.name }}>
+                      <b-tab title="{{ tab.name }}" id="for_tabs-{{ forloop.counter }}" class="{{ tab.name }}">
                         <b-card-text>
                             {% for entry in tab.entries %}
                                     {% render_tab_fieldsets_inlines entry %}
